<resources>
    <string name="app_name">Safe-driving-ui</string>
    <string name="app_heading">Safe-Driving</string>
    <string name="action_settings">Settings</string>
    <string name="current_address">Current Address</string>
    <string name="Tolerance">Tolerance</string>
    <string name="tolerance_set">tolerance_set</string>
    <string name="title_activity_settingslayout">Settings</string>
    <string name="About">About</string>
    <string name="lat_lon">Longitude / Latitude</string>
    <string name="speed_placeholder">Metric</string>
    <string name="threshold">Threshold</string>
    <string name="change_tolerance_range">   Change Tolerance</string>
    <string name="submit_tolerance">Submit</string>
    <string name="notification_tab">Notifications</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="audio_notifications">Audio</string>
    <string name="vibration_notifications">Vibration</string>
    <string name="metric_header">Mph/Kmh</string>
    <string name="metric_toggle1">Mph</string>
    <string name="metric_toggle2">Kmh</string>
    <string name="ToggleButton">ToggleButton</string>
    <string name="text_View">Max Speed</string>
    <string name="permissions">Permissions</string>
    <string name="current_speed">Current</string>
    <string name="tripStart">Start Trip</string>
    <string name="tripStop">Stop Trip</string>
    <string name="tolerance_def">10 mph</string>
    <string name="vibration_pref">Turn on/off vibration notifications</string>
    <string name="audio_pref">Turn on/off audio notifications</string>
    <string name="thresh_pref">Change the threshold at which you want to be alerted</string>
</resources>
