<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/NotificationsTab"
        android:layout_width="175dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="notifications_set"
        android:text="@string/notification_tab"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permissionstab" />

    <TextView
        android:id="@+id/permissionstab"
        android:layout_width="172dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/permissions"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/NotificationsTab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/metrictab"
        tools:text="Permissions" />

    <TextView
        android:id="@+id/Tolerancetab"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="tolerance_set"
        android:text="@string/Tolerance"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/metrictab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsHeader" />

    <TextView
        android:id="@+id/metrictab"
        android:layout_width="163dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/speed_placeholder"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/permissionstab"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tolerancetab" />

    <TextView
        android:id="@+id/settingsHeader"
        android:layout_width="158dp"
        android:layout_height="82dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/action_settings"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/Tolerancetab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <ToggleButton
        android:id="@+id/metricToggle"
        android:layout_width="90dp"
        android:layout_height="52dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:onClick="metric_switch"
        android:text="@string/ToggleButton"
        android:textOff="@string/metric_toggle1"
        android:textOn="@string/metric_toggle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsHeader" />

</android.support.constraint.ConstraintLayout>
