<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#004D40"
    tools:context=".ui.activities.MainActivity">

    <Button
        android:id="@+id/buttonSet"
        android:layout_width="151dp"
        android:layout_height="97dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="30dp"
        android:text="@string/action_settings"
        android:textSize="20sp"
        android:visibility="visible"
        android:textColor="#B2DFDB"
        android:textAlignment="gravity"
        android:gravity="center"
        android:background="@drawable/custome_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/LonLat"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custome_button"
        android:text="@string/lat_lon"

        android:textSize="30sp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textColor="#B2DFDB"
        app:layout_constraintBottom_toTopOf="@+id/maxSpeed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CurrentSpeed" />

    <TextView
        android:id="@+id/header"
        android:layout_width="353dp"
        android:layout_height="88dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/app_heading"
        android:textSize="50dp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textColor="#B2DFDB"
        app:layout_constraintBottom_toTopOf="@+id/CurrentSpeed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CurrentSpeed"
        android:layout_width="350dp"
        android:layout_height="155dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/current_speed"
        android:textSize="80sp"
        android:textStyle="bold"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textColor="#B2DFDB"
        android:background="@drawable/custome_button"
        app:layout_constraintBottom_toTopOf="@+id/LonLat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.796" />

    <TextView
        android:id="@+id/maxSpeed"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/custome_button"
        android:text="@string/text_View"
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="#B2DFDB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LonLat" />

    <ToggleButton
        android:id="@+id/tripButton"
        android:layout_width="146dp"
        android:layout_height="97dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="30dp"
        android:text="@string/tripStop"
        android:textOff="@string/tripStart"
        android:textOn="@string/tripStop"
        android:background="@color/green"
        android:onClick="toggleTrip"
        android:textSize="24sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>