<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Notification_header"
        android:layout_width="382dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/notification_settings"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/push"
        android:layout_width="242dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="42dp"
        android:text="@string/push_notifications"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/audio"
        app:layout_constraintEnd_toStartOf="@+id/pushSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Notification_header" />

    <TextView
        android:id="@+id/audio"
        android:layout_width="244dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:text="@string/audio_notifications"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/audioSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/push" />

    <Switch
        android:id="@+id/pushSwitch"
        android:layout_width="112dp"
        android:layout_height="76dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toTopOf="@+id/audio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/push"
        app:layout_constraintTop_toBottomOf="@+id/Notification_header"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/audioSwitch"
        android:layout_width="112dp"
        android:layout_height="67dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:layout_marginBottom="37dp"
        app:layout_constraintBottom_toTopOf="@+id/vibrationSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/audio"
        app:layout_constraintTop_toBottomOf="@+id/pushSwitch" />

    <TextView
        android:id="@+id/vibration"
        android:layout_width="245dp"
        android:layout_height="71dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="313dp"
        android:text="@string/vibration_notifications"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vibrationSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/audio" />

    <Switch
        android:id="@+id/vibrationSwitch"
        android:layout_width="108dp"
        android:layout_height="71dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginBottom="313dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vibration"
        app:layout_constraintTop_toBottomOf="@+id/audioSwitch" />
</android.support.constraint.ConstraintLayout>